Agent - fanuc iSeries/Distribution/30iHSSB/Fwlib32.h

#define MAX_AXIS        48
#define MAX_AXIS        32
#define MAX_AXIS        48
#define MAX_AXIS        32
#define ALL_AXES        (-1)
#define EW_NODLL        (-15)           
#define	EW_INIERR       (-14)           
#define	EW_ITLOW        (-13)           
#define	EW_ITHIGHT      (-12)           
#define EW_BUS          (-11)           
#define EW_SYSTEM2      (-10)           
#define EW_HSSB         (-9)            
#define EW_HANDLE       (-8)            
#define EW_VERSION      (-7)            
#define EW_UNEXP        (-6)            
#define EW_SYSTEM       (-5)            
#define EW_PARITY       (-4)            
#define EW_MMCSYS       (-3)            
#define EW_RESET        (-2)            
#define EW_BUSY         (-1)            
#define EW_OK           0               
#define EW_FUNC         1               
#define EW_NOPMC        1               
#define EW_LENGTH       2               
#define EW_NUMBER       3               
#define EW_RANGE        3               
#define EW_ATTRIB       4               
#define EW_TYPE         4               
#define EW_DATA         5               
#define EW_NOOPT        6               
#define EW_PROT         7               
#define EW_OVRFLOW      8               
#define EW_PARAM        9               
#define EW_BUFFER       10              
#define EW_PATH         11              
#define EW_MODE         12              
#define EW_REJECT       13              
#define EW_DTSRVR       14              
typedef struct odbact {
    short   dummy[2] ;  
    long    data ;      
} ODBACT ;
typedef struct odbaxis {
    short   dummy ;             
    short   type ;              
    long    data[MAX_AXIS] ;    
} ODBAXIS ;
typedef struct odbdy {
    short   dummy ;
    short   axis ;      
    short   alarm ;     
    short   prgnum ;    
    short   prgmnum ;   
    long    seqnum ;    
    long    actf ;      
    long    acts ;      
    union {
        struct {
            long    absolute[MAX_AXIS] ;    
            long    machine[MAX_AXIS] ;     
            long    relative[MAX_AXIS] ;    
            long    distance[MAX_AXIS] ;    
        } faxis ;
        struct {
            long    absolute ;  
            long    machine ;   
            long    relative ;  
            long    distance ;  
        } oaxis ;   
    } pos ;
} ODBDY ;
typedef struct odbdy2 {
    short   dummy ;
    short   axis ;       
    long    alarm ;      
    long    prgnum ;     
    long    prgmnum ;    
    long    seqnum ;     
    long    actf ;       
    long    acts ;       
    union {
        struct {
            long    absolute[MAX_AXIS] ;    
            long    machine[MAX_AXIS] ;     
            long    relative[MAX_AXIS] ;    
            long    distance[MAX_AXIS] ;    
        } faxis ;
        struct {
            long    absolute ;  
            long    machine ;   
            long    relative ;  
            long    distance ;  
        } oaxis ;   
    } pos ;
} ODBDY2 ;
typedef struct idbwrr {
    short   datano;         
    short   type;           
    long    data[MAX_AXIS]; 
} IDBWRR;
typedef struct odbup {
    short   dummy[2] ;  
    char    data[256] ; 
} ODBUP ;   
typedef struct prgdir {
    char    prg_data[256] ; 
} PRGDIR ;  
typedef struct odbnc {
    union {
        struct {
            short   reg_prg ;       
            short   unreg_prg ;     
            long    used_mem ;      
            long    unused_mem ;    
        } bin ;             
        char    asc[31] ;   
    } u ;
} ODBNC ;
typedef struct odbpro {
    short   dummy[2] ;  
    short   data ;      
    short   mdata ;     
} ODBPRO ;
typedef struct odbseq {
    short   dummy[2] ;  
    long    data ;      
} ODBSEQ ;
typedef struct odbmdip {
    short   mdiprog;    
    long    mdipntr;    
    short   crntprog;   
    long    crntpntr;   
} ODBMDIP;
typedef struct odbtofs {
    short   datano ;    
    short   type ;      
    long    data ;      
} ODBTOFS ;
typedef struct iodbto {
    short   datano_s ;  
    short   type ;      
    short   datano_e ;  
    union {
        long    m_ofs[5] ;      
        long    m_ofs_a[5] ;    
        long    m_ofs_b[10] ;   
        long    m_ofs_c[20] ;   
        struct  {
            short   tip ;
            long    data[1] ;
        } m_ofs_at[5] ;         
        struct  {
            short   tip ;
            long    data[2] ;
        } m_ofs_bt[5] ;         
        struct  {
            short   tip ;
            long    data[4] ;
        } m_ofs_ct[5] ;         
        short   t_tip[5] ;      
        long    t_ofs[5] ;      
        struct  {
            short   tip ;
            long    data[4] ;
        } t_ofs_a[5] ;          
        struct {
            short   tip ;
            long    data[8] ;
        } t_ofs_b[5] ;          
        long    t_ofs_2g[15];   
        long    m_ofs_cnr[10];  
        struct  {
                long    data[2];
        } t_ofs_ex[5];		     
    } u ;   
} IODBTO ;
typedef struct iodbpsd {
    short   datano ;    
    short   type ;      
    union {
        char    cdata ;     
        short   idata ;
        long    ldata ;
        REALPRM rdata ;
        char    cdatas[MAX_AXIS] ;
        short   idatas[MAX_AXIS] ;
        long    ldatas[MAX_AXIS] ;
        REALPRM rdatas[MAX_AXIS] ;
    } u ;
} IODBPSD ;
typedef struct iodbpsd {
    short   datano ;    
    short   type ;      
    union {
        char    cdata ;     
        short   idata ;
        long    ldata ;
        char    cdatas[MAX_AXIS] ;
        short   idatas[MAX_AXIS] ;
        long    ldatas[MAX_AXIS] ;
    } u ;
} IODBPSD ;
typedef struct odbm {
    short   datano ;    
    short   dummy ;     
    long    mcr_val ;   
    short   dec_val ;   
} ODBM ;
typedef struct iodbmr {
    short   datano_s ;  
    short   dummy ;     
    short   datano_e ;  
    struct {
        long    mcr_val ;   
        short   dec_val ;   
    } data[5] ;
} IODBMR ;  
typedef struct odbtlinf {
    short   ofs_type;
    short   use_no;
} ODBTLINF;
typedef struct odbmvinf {
    short   use_no1;
    short   use_no2;
} ODBMVINF;
typedef struct odbhis {
    unsigned short  s_no;   
    short   type;           
    unsigned short  e_no;   
    union {
        struct {
            short   rec_type;   
            short   alm_grp;    
            short   alm_no;     
            char    axis_no;    
            char    dummy;
        } rec_alm;
        struct {
            short   rec_type;   
            char    key_code;   
            char    pw_flag;    
            char    dummy[4];
        } rec_mdi;
        struct {
            short   rec_type;   
            char    sig_name;   
            char    sig_old;    
            char    sig_new;    
            char    dummy;
            short   sig_no;     
        } rec_sgn;
        struct {
            short   rec_type;   
            char    year;       
            char    month;      
            char    day;        
            char    pw_flag;    
            char    dummy[2];
        } rec_date;
        struct {
            short   rec_type;   
            char    hour;       
            char    minute;     
            char    second;     
            char    pw_flag;    
            char    dummy[2];
        } rec_time;
    } data[10];
} ODBHIS;   
typedef struct odbparaif {
    unsigned short  info_no ;
    short   prev_no ;
    short   next_no ;
    struct {
        short   prm_no ;
        short   prm_type ;
    } info[10] ;    
} ODBPARAIF ;
typedef struct odbproo8 {
     short   dummy[2] ;  
     long    data ;      
     long    mdata ;     
} ODBPROO8 ;
typedef struct odbmdipo8 {
    long   mdiprog;     
    long   mdipntr;     
    long   crntprog;    
    long   crntpntr;    
} ODBMDIPO8;
FWLIBAPI short WINAPI cnc_actf( unsigned short, ODBACT * ) ;
FWLIBAPI short WINAPI cnc_absolute( unsigned short, short, short, ODBAXIS * ) ;
FWLIBAPI short WINAPI cnc_machine( unsigned short, short, short, ODBAXIS * ) ;
FWLIBAPI short WINAPI cnc_relative( unsigned short, short, short, ODBAXIS * ) ;
FWLIBAPI short WINAPI cnc_distance( unsigned short, short, short, ODBAXIS * ) ;
FWLIBAPI short WINAPI cnc_skip( unsigned short, short, short, ODBAXIS * ) ;
FWLIBAPI short WINAPI cnc_srvdelay( unsigned short, short, short, ODBAXIS * ) ;
FWLIBAPI short WINAPI cnc_accdecdly( unsigned short, short, short, ODBAXIS * ) ;
FWLIBAPI short WINAPI cnc_rddynamic( unsigned short, short, short, ODBDY * ) ;
FWLIBAPI short WINAPI cnc_wrrelpos( unsigned short, short, IDBWRR * ) ;
FWLIBAPI short WINAPI cnc_upload( unsigned short, ODBUP *, unsigned short * ) ;
FWLIBAPI short WINAPI cnc_rdprogdir( unsigned short, short, short, short, unsigned short, PRGDIR * ) ;
FWLIBAPI short WINAPI cnc_rdproginfo( unsigned short, short, short, ODBNC * ) ;
FWLIBAPI short WINAPI cnc_rdprgnum( unsigned short, ODBPRO * ) ;
FWLIBAPI short WINAPI cnc_rdseqnum( unsigned short, ODBSEQ * ) ;
FWLIBAPI short WINAPI cnc_rdtofs( unsigned short, short, short, short, ODBTOFS * ) ;
FWLIBAPI short WINAPI cnc_rdtofsr( unsigned short, short, short, short, short, IODBTO * ) ;
FWLIBAPI short WINAPI cnc_wrtofsr( unsigned short, short, IODBTO * ) ;
FWLIBAPI short WINAPI cnc_rdparam( unsigned short, short, short, short, IODBPSD * ) ;
FWLIBAPI short WINAPI cnc_wrparam( unsigned short, short, IODBPSD * ) ;
FWLIBAPI short WINAPI cnc_rdparar( unsigned short, short *, short, short *, short *, void * ) ;
FWLIBAPI short WINAPI cnc_wrparas( unsigned short, short, void * ) ;
FWLIBAPI short WINAPI cnc_rdsetr( unsigned short, short *, short, short *, short *, void * ) ;
FWLIBAPI short WINAPI cnc_wrsets( unsigned short, short, void * ) ;
FWLIBAPI short WINAPI cnc_rdmacro( unsigned short, short, short, ODBM * ) ;
FWLIBAPI short WINAPI cnc_rdmacror( unsigned short, short, short, short, IODBMR * ) ;
FWLIBAPI short WINAPI cnc_wrmacror( unsigned short, short, IODBMR * ) ;
FWLIBAPI short WINAPI cnc_rdtofsinfo( unsigned short, ODBTLINF * ) ;
FWLIBAPI short WINAPI cnc_rdmacroinfo( unsigned short, ODBMVINF * ) ;
FWLIBAPI short WINAPI cnc_rdophistry( unsigned short, unsigned short, unsigned short, unsigned short, ODBHIS * ) ;
FWLIBAPI short WINAPI cnc_rdparainfo( unsigned short, short, unsigned short, ODBPARAIF * ) ;
#define ODBPRO		ODBPROO8
#define ODBMDIP		ODBMDIPO8
#define cnc_rdprogdir	cnc_rdprogdiro8
#define cnc_rdprgnum	cnc_rdprgnumo8
#define cnc_rddynamic	cnc_rddynamico8